// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/comment/demo/basic.md correctly 1`] = `
<div
  class="ant-comment"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-image"
      >
        <img
          alt="Han Solo"
          src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
        />
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-author"
      >
        <span
          class="ant-comment-content-author-name"
        >
          <a>
            Han Solo
          </a>
        </span>
        <span
          class="ant-comment-content-author-time"
        >
          <span>
            a few seconds ago
          </span>
        </span>
      </div>
      <div
        class="ant-comment-content-detail"
      >
        <p>
          We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
        </p>
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li>
          <span>
            <i
              aria-label="icon: like"
              class="anticon anticon-like"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#like"
                />
              </svg>
            </i>
            <span
              style="padding-left:8px;cursor:auto"
            >
              0
            </span>
          </span>
        </li>
        <li>
          <span>
            <i
              aria-label="icon: dislike"
              class="anticon anticon-dislike"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#dislike"
                />
              </svg>
            </i>
            <span
              style="padding-left:8px;cursor:auto"
            >
              0
            </span>
          </span>
        </li>
        <li>
          <span>
            Reply to
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/comment/demo/editor.md correctly 1`] = `
<div>
  <div
    class="ant-comment"
  >
    <div
      class="ant-comment-inner"
    >
      <div
        class="ant-comment-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-image"
        >
          <img
            alt="Han Solo"
            src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
          />
        </span>
      </div>
      <div
        class="ant-comment-content"
      >
        <div
          class="ant-comment-content-author"
        />
        <div
          class="ant-comment-content-detail"
        >
          <div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-form-item-control-wrapper"
              >
                <div
                  class="ant-form-item-control"
                >
                  <span
                    class="ant-form-item-children"
                  >
                    <textarea
                      class="ant-input"
                      rows="4"
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-form-item-control-wrapper"
              >
                <div
                  class="ant-form-item-control"
                >
                  <span
                    class="ant-form-item-children"
                  >
                    <button
                      class="ant-btn ant-btn-primary"
                      type="submit"
                    >
                      <span>
                        Add Comment
                      </span>
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/comment/demo/list.md correctly 1`] = `
<div
  class="ant-list comment-list ant-list-split"
>
  <div
    class="ant-list-header"
  >
    2 replies
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-comment"
      >
        <div
          class="ant-comment-inner"
        >
          <div
            class="ant-comment-avatar"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </div>
          <div
            class="ant-comment-content"
          >
            <div
              class="ant-comment-content-author"
            >
              <span
                class="ant-comment-content-author-name"
              >
                Han Solo
              </span>
              <span
                class="ant-comment-content-author-time"
              >
                <span>
                  a day ago
                </span>
              </span>
            </div>
            <div
              class="ant-comment-content-detail"
            >
              <p>
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </p>
            </div>
            <ul
              class="ant-comment-actions"
            >
              <li>
                <span>
                  Reply to
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ant-comment"
      >
        <div
          class="ant-comment-inner"
        >
          <div
            class="ant-comment-avatar"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </div>
          <div
            class="ant-comment-content"
          >
            <div
              class="ant-comment-content-author"
            >
              <span
                class="ant-comment-content-author-name"
              >
                Han Solo
              </span>
              <span
                class="ant-comment-content-author-time"
              >
                <span>
                  2 days ago
                </span>
              </span>
            </div>
            <div
              class="ant-comment-content-detail"
            >
              <p>
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </p>
            </div>
            <ul
              class="ant-comment-actions"
            >
              <li>
                <span>
                  Reply to
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/comment/demo/nested.md correctly 1`] = `
<div
  class="ant-comment"
>
  <div
    class="ant-comment-inner"
  >
    <div
      class="ant-comment-avatar"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-image"
      >
        <img
          alt="Han Solo"
          src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
        />
      </span>
    </div>
    <div
      class="ant-comment-content"
    >
      <div
        class="ant-comment-content-author"
      >
        <span
          class="ant-comment-content-author-name"
        >
          <a>
            Han Solo
          </a>
        </span>
      </div>
      <div
        class="ant-comment-content-detail"
      >
        <p>
          We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure).
        </p>
      </div>
      <ul
        class="ant-comment-actions"
      >
        <li>
          <span>
            Reply to
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ant-comment-nested"
  >
    <div
      class="ant-comment"
    >
      <div
        class="ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
          >
            <img
              alt="Han Solo"
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </span>
        </div>
        <div
          class="ant-comment-content"
        >
          <div
            class="ant-comment-content-author"
          >
            <span
              class="ant-comment-content-author-name"
            >
              <a>
                Han Solo
              </a>
            </span>
          </div>
          <div
            class="ant-comment-content-detail"
          >
            <p>
              We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure).
            </p>
          </div>
          <ul
            class="ant-comment-actions"
          >
            <li>
              <span>
                Reply to
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ant-comment-nested"
      >
        <div
          class="ant-comment"
        >
          <div
            class="ant-comment-inner"
          >
            <div
              class="ant-comment-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  alt="Han Solo"
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-comment-content"
            >
              <div
                class="ant-comment-content-author"
              >
                <span
                  class="ant-comment-content-author-name"
                >
                  <a>
                    Han Solo
                  </a>
                </span>
              </div>
              <div
                class="ant-comment-content-detail"
              >
                <p>
                  We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure).
                </p>
              </div>
              <ul
                class="ant-comment-actions"
              >
                <li>
                  <span>
                    Reply to
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="ant-comment"
        >
          <div
            class="ant-comment-inner"
          >
            <div
              class="ant-comment-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  alt="Han Solo"
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-comment-content"
            >
              <div
                class="ant-comment-content-author"
              >
                <span
                  class="ant-comment-content-author-name"
                >
                  <a>
                    Han Solo
                  </a>
                </span>
              </div>
              <div
                class="ant-comment-content-detail"
              >
                <p>
                  We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure).
                </p>
              </div>
              <ul
                class="ant-comment-actions"
              >
                <li>
                  <span>
                    Reply to
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
